# UinputTest

./: G512Driver.cabal  README.md  UinputTest.cabal  stack.yaml
src/: Events.hs  IOCtl.hs  IOCtl.hsc  Main.hs
