name:                G512Driver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xandaros/G512Driver#readme
license:             BSD3
license-file:        LICENSE
author:              Xandaros
maintainer:          Xandaros
copyright:           2017 Xandaros
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable G512Driver
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Events
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , unix
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Xandaros/G512Driver
